# sighash

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/digest/: digest.h
src/job/: CMakeLists.txt  job_controller.h  signature_calculator_job.h  signature_calculator_job_piece.h
src/job/base/: base_job.h  base_job_controller.h
src/job/job_controller/: job_controller.cpp
